ui/select.reel/select.css
.Select {
    position: relative;
    display: inline-block;
    font-size: 1em;
    line-height: 1.2;
    font-weight: 300;
    -webkit-user-select: none;
    width: 100%;
    font-family: 'Lato', 'helvetica neue', 'helvetica', 'sans-serif';
}

.Select-currentOption {
    box-sizing: border-box;
    position: relative;
    border: none;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    font-weight: inherit;
    height: 2em;
    width: 100%;
    text-align: left;
    padding: 0 2.5em .1em .5em;
    border-radius: 4px;
    background: rgba(0, 0, 0, .25);
    border-top:     1px solid rgba(0, 0, 0, .23);
    border-bottom:  1px solid rgba(255, 255, 255, .15);
    outline: none;
    color: white;
    -webkit-appearance: none;
    cursor: pointer;
    text-overflow: ellipsis;
    overflow: hidden;
}

/* arrow icon */

.Select-currentOption:after {
    content: "\76";
    box-sizing: border-box;
    font-family: "freenas";
    font-size: 1.3em;
    position: absolute;
    text-align: center;
    width:  1.2em;
    height: 1.2em;
    right:  .125em;
    top:    50%;
    margin-top: -.625em;
    background: #FFF;
    border-radius: 3px;
    text-shadow: 0 1px 0 rgba(0, 0, 0, .5);
    background-color: #666;
    background-image: linear-gradient(to bottom, #666, #505050);
    border-bottom:  1px solid rgba(0, 0, 0, .36);
    border-top:     1px solid rgba(255, 255, 255, .21);
}

.Select-currentOption:hover { background: rgba(0, 0, 0, .15); }
.Select-currentOption:hover:after { background-image: linear-gradient(to bottom, #777, #606060); }
.Select-currentOption:hover .select { background-color: rgba(0, 0, 0, .17); }
.Select-currentOption.expanded:after { background-image: linear-gradient(to bottom, #0095d5, #0076a9); }

/* Options Drop Down */

.Select-options-scrollview {
    display: flex;
    flex-direction: column;
    position: absolute !important;
    top:    0px;
    left:   0;
    right:  1px;
    visibility: hidden;
    overflow: hidden;
    opacity: 0;
    z-index: 1000;
    border-radius: 3px;
    background: rgba(90, 90, 90, 1);
    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
}

.Select-options {
    flex: 1;
    display: flex;
    flex-direction: column;
    font-weight: inherit;
    font-size: inherit;
    line-height: inherit;
    cursor: pointer;
}

.Select-currentOption:focus + .Select-options-scrollview,
.Select-options-scrollview:active {
    visibility: visible;
    opacity: 1;
}

.Select-option {
    padding: 0 2.5em 0 .5em;
    font-weight: inherit;
    font-size: inherit;
    line-height: 2em;
    color: white;
    margin-top: -.05em;
}

.Select-option:hover  { background: rgba(105, 105, 105, 1);}
.Select-option:active { background: #0095d5; }

.Select-option.selected {
    background: #0095d5;
    cursor: default;
    order: -1;
}

/* Disabled State */

.Field.disabled .Select {
    background: rgba(0, 0, 0, .1);
    border-color: transparent;
    opacity: .5;
    pointer-events: none;
}

